--- a/Series/Series/Supporting Files/es-419.lproj/Localizable.strings
+++ b/Series/Series/Supporting Files/es-419.lproj/Localizable.strings
@@ -17,3 +17,5 @@
 "SE_STORAGE_SAVE_ERROR" = "Falló el guardado de datos.";
 "SE_STORAGE_DELETE_ERROR" = "Falló la eliminación de datos.";
 "SE_STORAGE_FETCH_ERROR" = "Falló la obtención de datos.";
+// MARK: - Show's list
+"SE_SHOW_LIST_ERROR_TITLE" = "Error al cargar series";
