--- a/Series/Series/Supporting Files/en.lproj/Localizable.strings
+++ b/Series/Series/Supporting Files/en.lproj/Localizable.strings
@@ -19,3 +19,4 @@
 "SE_STORAGE_FETCH_ERROR" = "The retrieving of data failed.";
 // MARK: - Show's list
 "SE_SHOW_LIST_ERROR_TITLE" = "Couldn't load shows";
+"SE_SHOW_LIST_SEARCH_PLACEHOLDER" = "Search";
