--- a/Series/Series/Supporting Files/es-419.lproj/Localizable.strings
+++ b/Series/Series/Supporting Files/es-419.lproj/Localizable.strings
@@ -20,3 +20,4 @@
 // MARK: - Show's list
 "SE_SHOW_LIST_ERROR_TITLE" = "Error al cargar series";
 "SE_SHOW_LIST_SEARCH_PLACEHOLDER" = "Buscar";
+"SE_SHOW_LIST_SEARCH_EMPTY_MESSAGE" = "No se encontraron resultados para '%@'";
