--- a/Series/Series/Supporting Files/es-419.lproj/Localizable.strings
+++ b/Series/Series/Supporting Files/es-419.lproj/Localizable.strings
@@ -21,3 +21,16 @@
 "SE_SHOW_LIST_ERROR_TITLE" = "Error al cargar series";
 "SE_SHOW_LIST_SEARCH_PLACEHOLDER" = "Buscar";
 "SE_SHOW_LIST_SEARCH_EMPTY_MESSAGE" = "No se encontraron resultados para '%@'";
+"SE_SHOW_LIST_TITLE" = "Series";
+// MARK: - People's list
+"SE_PEOPLE_LIST_ERROR_TITLE" = "Error al cargar personas";
+"SE_PEOPLE_LIST_SEARCH_EMPTY_MESSAGE" = "No se encontraron resultados para '%@'";
+"SE_PEOPLE_LIST_TITLE" = "Personas";
+// MARK: - Show's detail
+"SE_SHOW_DETAIL_SCHEDULE_TITLE" = "Horarios: ";
+"SE_SHOW_DETAIL_GENRES_TITLE" = "Géneros: ";
+// MARK: - Episodes detail
+"SE_EPISODE_DETAIL_ERROR_TITLE" = "Error al cargar episodio";
+"SE_EPISODE_DETAIL_SEASON_TITLE" = "Temporada: ";
+"SE_EPISODE_DETAIL_NUMBER_TITLE" = "Número: ";
+"SE_EPISODE_DETAIL_SUMMARY_TITLE" = "Sinopsis: ";
